--- a/templates/additem.html
+++ b/templates/additem.html
@@ -202,7 +202,7 @@
     <!-- Fields for Private Lessons -->
     <div class="field lessons" style="display:none">
         <label for="title_lessons">Title:</label>
-        <input type="text" name="title_lessons" id="title_lessons" required><br>
+        <input type="text" name="title" id="title" required><br>
 
         <label for="tutor_name">Tutor Name:</label>
         <input type="text" name="tutor_name" id="tutor_name" required><br>
@@ -210,20 +210,20 @@
         <label for="lessons_offered">Lessons:</label>
         <input type="text" name="lessons_offered" id="lessons_offered" required><br>
 
-        <label for="location_lessons">Location:</label>
-        <input type="text" name="location_lessons" id="location_lessons" required><br>
+        <label for="location">Location:</label>
+        <input type="text" name="location" id="location" required><br>
 
-        <label for="duration_lessons">Duration:</label>
-        <input type="text" name="duration_lessons" id="duration_lessons" required><br>
+        <label for="duration">Duration:</label>
+        <input type="text" name="duration" id="duration" required><br>
 
         <label for="price_lessons">Price:</label>
-        <input type="number" name="price_lessons" id="price_lessons" required><br>
+        <input type="number" name="price_lessons" id="price" required><br>
 
-        <label for="image_lessons">Image URL:</label>
-        <input type="url" name="image_lessons" id="image_lessons"><br>
+        <label for="image_link">Image URL:</label>
+        <input type="url" name="image_link" id="image_link"><br>
 
-        <label for="description_lessons">Description:</label>
-        <textarea name="description_lessons" id="description_lessons" required></textarea><br>
+        <label for="description">Description:</label>
+        <textarea name="description" id="description" required></textarea><br>
     </div>
     
     <button type="submit">Add Item</button>
