--- a/templates/additem.html
+++ b/templates/additem.html
@@ -104,7 +104,7 @@
         <input type="number" name="price" id="price" required><br>
         
         <label for="image">Image URL:</label>
-        <input type="url" name="image" id="image"><br>
+        <input type="url" name="image_link" id="image_link"><br>
         
         <label for="description">Description:</label>
         <textarea name="description" id="description" required></textarea><br>
@@ -113,10 +113,10 @@
     <!-- Fields for Computers -->
     <div class="field computers" style="display:none">
         <label for="title_computers">Title:</label>
-        <input type="text" name="title_computers" id="title_computers" required><br>
+        <input type="text" name="title" id="title" required><br>
     
         <label for="type_computers">Type:</label>
-        <select name="type_computers" id="type_computers" required>
+        <select name="type" id="type" required>
             <option value="tablet">Tablet</option>
             <option value="notebook">Notebook</option>
             <option value="desktop">Desktop</option>
@@ -124,79 +124,79 @@
         </select><br>
     
         <label for="brand_computers">Brand:</label>
-        <input type="text" name="brand_computers" id="brand_computers" required><br>
+        <input type="text" name="brand" id="brand" required><br>
         
         <label for="model_computers">Model:</label>
-        <input type="text" name="model_computers" id="model_computers" required><br>
+        <input type="text" name="model" id="model" required><br>
         
         <label for="year_computers">Year:</label>
-        <input type="number" name="year_computers" id="year_computers" required><br>
+        <input type="number" name="year" id="year" required><br>
         
         <label for="processor_computers">Processor:</label>
-        <input type="text" name="processor_computers" id="processor_computers" required><br>
+        <input type="text" name="processor" id="processor" required><br>
         
         <label for="ram_computers">RAM:</label>
-        <input type="text" name="ram_computers" id="ram_computers" required><br>
+        <input type="text" name="ram" id="ram" required><br>
         
         <label for="storage_computers">Storage:</label>
-        <input type="text" name="storage_computers" id="storage_computers" required><br>
+        <input type="text" name="storage" id="storage" required><br>
         
         <label for="graphics_card_computers">Graphics Card:</label>
-        <input type="text" name="graphics_card_computers" id="graphics_card_computers"><br>
+        <input type="text" name="graphics_card" id="graphics_card"><br>
         
         <label for="os_computers">Operating System:</label>
-        <input type="text" name="os_computers" id="os_computers" required><br>
+        <input type="text" name="operating_system" id="operating_system" required><br>
         
         <label for="price_computers">Price:</label>
-        <input type="number" name="price_computers" id="price_computers" required><br>
+        <input type="number" name="price" id="price" required><br>
         
         <label for="image_computers">Image URL:</label>
-        <input type="url" name="image_computers" id="image_computers"><br>
+        <input type="url" name="image_link" id="image_link"><br>
         
         <label for="description_computers">Description:</label>
-        <textarea name="description_computers" id="description_computers" required></textarea><br>
+        <textarea name="description" id="description" required></textarea><br>
     </div>
     
     <!-- Fields for Phones -->
     <div class="field phones" style="display:none">
         <label for="title_phones">Title:</label>
-        <input type="text" name="title_phones" id="title_phones" required><br>
+        <input type="text" name="title" id="title" required><br>
 
         <label for="brand_phones">Brand:</label>
-        <input type="text" name="brand_phones" id="brand_phones" required><br>
+        <input type="text" name="brand" id="brand" required><br>
 
         <label for="model_phones">Model:</label>
-        <input type="text" name="model_phones" id="model_phones" required><br>
+        <input type="text" name="model" id="model" required><br>
 
         <label for="year_phones">Year:</label>
-        <input type="number" name="year_phones" id="year_phones" required><br>
+        <input type="number" name="year" id="year" required><br>
 
         <label for="os_phones">Operating System:</label>
-        <input type="text" name="os_phones" id="os_phones" required><br>
+        <input type="text" name="operating_system" id="operating_system" required><br>
 
         <label for="processor_phones">Processor:</label>
-        <input type="text" name="processor_phones" id="processor_phones"><br>
+        <input type="text" name="processor" id="processor"><br>
 
         <label for="ram_phones">RAM:</label>
-        <input type="text" name="ram_phones" id="ram_phones" required><br>
+        <input type="text" name="ram" id="ram" required><br>
 
         <label for="storage_phones">Storage:</label>
-        <input type="text" name="storage_phones" id="storage_phones" required><br>
+        <input type="text" name="storage" id="storage" required><br>
 
         <label for="camera_phones">Camera Specifications:</label>
-        <input type="text" name="camera_phones" id="camera_phones"><br>
+        <input type="text" name="camera_specifications" id="camera_specifications"><br>
 
         <label for="battery_phones">Battery Capacity:</label>
-        <input type="text" name="battery_phones" id="battery_phones" required><br>
+        <input type="text" name="battery_capacity" id="battery_capacity" required><br>
 
         <label for="price_phones">Price:</label>
-        <input type="number" name="price_phones" id="price_phones" required><br>
+        <input type="number" name="price" id="price" required><br>
 
         <label for="image_phones">Image URL:</label>
-        <input type="url" name="image_phones" id="image_phones"><br>
+        <input type="url" name="image_link" id="image_link"><br>
 
         <label for="description_phones">Description:</label>
-        <textarea name="description_phones" id="description_phones" required></textarea><br>
+        <textarea name="description" id="description" required></textarea><br>
     </div>
     
     <!-- Fields for Private Lessons -->
@@ -217,7 +217,7 @@
         <input type="text" name="duration" id="duration" required><br>
 
         <label for="price_lessons">Price:</label>
-        <input type="number" name="price_lessons" id="price" required><br>
+        <input type="number" name="price" id="price" required><br>
 
         <label for="image_link">Image URL:</label>
         <input type="url" name="image_link" id="image_link"><br>
