--- a/templates/index.html
+++ b/templates/index.html
@@ -98,22 +98,21 @@
         <div class="header-content">
             <h1>CENGden</h1>
         </div>
-    <div>
-        <ul class="menu">
-            {% if 'email' in session %}
-            <a href="/additem">Add item</a>
-            <a href="/account">My Account</a>
-            <a href="/items">My Items</a>
-            <a href="/favorites">My Favorites</a>
-            <a href="/logout">Logout</a>
-        {% else %}
-            <a href="/register">Register</a>
-            <a href="/login">Login</a>
-        {% endif %}
-        </ul>
-    </div>
-    
-    <div class="categories-label">CATEGORIES</div>
+        <div>
+            <ul class="menu">
+                {% if 'email' in session %}
+                <a href="/additem">Add item</a>
+                <a href="/account">My Account</a>
+                <a href="/items">My Items</a>
+                <a href="/favorites">My Favorites</a>
+                <a href="/logout">Logout</a>
+                {% else %}
+                <a href="/register">Register</a>
+                <a href="/login">Login</a>
+                {% endif %}
+            </ul>
+        </div>
+        <div class="categories-label">CATEGORIES</div>
         <ul class="categories-list">
             <li><a href="#">Vehicles</a></li>
             <li><a href="#">Computers</a></li>
@@ -123,7 +122,14 @@
     </div>
     <div class="latest-items">
         <h2>Latest Items</h2>
-        <!-- Content for latest items here -->
+        {% for item in items %}
+        <div class="item">
+            <a href="/item/{{ item['_id'] }}">
+                <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:100px;height:100px;">
+                <div>{{ item['title'] }}</div>
+            </a>
+        </div>
+        {% endfor %}
         <div class="pagination">
             <a href="#">Previous</a> <a href="#">1</a> <a href="#">2</a> <a href="#">Next</a>
         </div>
