--- a/templates/category.html
+++ b/templates/category.html
@@ -27,7 +27,7 @@
 
         .header-content {
             text-align: center;
-            margin-left: 600px;
+            margin-left: 580px;
         }
 
         .menu, .categories-container {
@@ -93,6 +93,7 @@
     </style>
 </head>
 <body>
+    <div class="categories-label">CATEGORIES</div>
     <div class="categories-container">
         <a href="/category/vehicles">Vehicles</a>
         <a href="/category/computers">Computers</a>
