--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
             left: 20px;
             padding: 10px;
             border-radius: 5px;
-            background-color: #007bff;
+            background-color: #ff3300;
         }
 
         .categories-label {
