--- a/templates/category.html
+++ b/templates/category.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
+            padding-bottom: 100px; /* Adjust based on your footer's height */
             display: flex;
             flex-direction: column;
             align-items: center; /* Center the content */
@@ -50,7 +50,7 @@
             left: 20px;
             padding: 10px;
             border-radius: 5px;
-            background-color: #007bff;
+            background-color: #ff3300;
         }
 
         .categories-label {
