--- a/templates/index.html
+++ b/templates/index.html
@@ -118,13 +118,14 @@
         </ul>
     </div>
     <div class="latest-items">
+        {% for item in items %}
         <h2>Latest Items</h2>
         {% for item in items %}
         <div class="item">
             <a href="/item/{{ item['_id'] }}">
                 <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:200px;height:200px;">
-                <div>{{ item['title'] }}</div>
             </a>
+            <div>{{ item['title'] }}</div>
         </div>
         {% endfor %}
         <div class="pagination">
