--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -5,13 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ item['title'] }}</title>
     <style>
-        .item-container {
-            text-align: center;
-            margin-top: 20px;
+        body, html {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center; /* Ensure text is centered */
+            flex-direction: column; /* Stack items vertically */
         }
-        .item-image {
-            max-width: 300px;
-            margin-bottom: 20px;
+        .item-container {
+            width: 60%; /* Adjust width as necessary */
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Optional: adds some shadow for better visibility */
+        }
+        .item-image img {
+            max-width: 100%; /* Ensure the image is responsive */
+            height: auto; /* Maintain aspect ratio */
         }
         .item-details {
             margin-top: 20px;
@@ -19,14 +29,14 @@
         .item-details p {
             margin: 10px 0; /* Adds padding between each property */
         }
-        .contact-info {
-            margin-top: 30px;
-        }
     </style>
 </head>
 <body>
+    <div class="item-container">
     <h2>{{ item['title'] }}</h2>
-    <img  class="item-image" src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:300px;">
+    <div class= "item-image">
+    <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:300px;">
+    </div>
     <div class="item-details">
         <p><strong>Category:</strong> {{ item['category'] }}</p>
         <p><strong>Description:</strong> {{ item['description'] }}</p>
