--- a/templates/account.html
+++ b/templates/account.html
@@ -53,32 +53,28 @@
             color: dodgerblue;
         }
 
-        .signin {
-            background-color: #f1f1f1;
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .error {
-            color: red;
-            text-align: center;
-        }
-
     </style>
 </head>
 <body>
-    <h1>My Account</h1>
-    <form action="/account" method="post">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" value="{{ user['email'] }}" required><br>
+<form action="/account" method="POST">
+    <div class="container">
+        <h1>My Account</h1>
+        <form action="/account" method="post">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" value="{{ user['email'] }}"><br>
 
-        <label for="phone">Phone:</label>
-        <input type="text" id="phone" name="phone" value="{{ user.get('phone', '') }}"><br>
+            <label for="phone">Phone:</label>
+            <input type="text" id="phone" name="phone" value="{{ user.get('phone', '') }}"><br>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" placeholder="******"><br>
+            <label for="name"><b>Name</b></label>
+            <input type="text" id="name" name="name"value="{{user['name']}}">
 
-        <button type="submit" class="updatebutton">Update</button>
-    </form>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" placeholder="******"><br>
+
+            <button type="submit" class="updatebutton">Update</button>
+
+</form>
+        
 </body>
 </html>
