--- a/templates/account.html
+++ b/templates/account.html
@@ -58,8 +58,7 @@
 <body>
 <form action="/account" method="POST">
     <div class="container">
-        <h1>My Account</h1>
-        <form action="/account" method="post">
+        <h1>My CENGden Account</h1>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" value="{{ user['email'] }}"><br>
 
@@ -73,7 +72,7 @@
             <input type="password" id="password" name="password" placeholder="******"><br>
 
             <button type="submit" class="updatebutton">Update</button>
-
+    </div>
 </form>
         
 </body>
