--- a/templates/account.html
+++ b/templates/account.html
@@ -40,6 +40,20 @@
             opacity: 1;
         }
     </style>
+
+<script>
+    // JavaScript for form validation
+    function validateForm() {
+        var newPassword = document.getElementById("new-password").value;
+        var confirmPassword = document.getElementById("confirm-new-password").value;
+        if(newPassword !== confirmPassword) {
+            alert("Passwords do not match.");
+            return false; // Prevent form submission
+        }
+        // Optional: Add pattern validation for email here if you need stricter control
+        return true; // Allow form submission
+    }
+</script>
 </head>
 <body>
 
@@ -47,7 +61,7 @@
     <div class="container">
         <h1>My CENGden Account</h1>
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" value="{{ user['email'] }}" pattern=".*@ceng.metu.edu.tr$" readonly><br>
+            <input type="email" id="email" name="email" value="{{ user['email'] }}" pattern=".*@ceng.metu.edu.tr$"><br>
             
             <label for="phone">Phone:</label>
             <input type="tel" id="phone" name="phone" value="{{ user.get('phone', '') }}"><br>
