--- a/templates/account.html
+++ b/templates/account.html
@@ -70,7 +70,7 @@
             <input type="text" id="name" name="name" value="{{ user['name'] }}"><br>
 
             <label for="new-password">New Password:</label>
-            <input type="password" id="new-password" name="new-password" placeholder="Enter new password"><br>
+            <input type="password" id="new-password" name="new-password" placeholder="Enter new password if you want to change it"><br>
 
             <label for="confirm-new-password">Confirm New Password:</label>
             <input type="password" id="confirm-new-password" name="confirm-new-password" placeholder="Confirm new password"><br>
