--- a/templates/additem.html
+++ b/templates/additem.html
@@ -48,7 +48,8 @@
 
     var addCameraSpecButton = document.getElementById('addCameraSpec');
     if (addCameraSpecButton) {
-        addCameraSpecButton.addEventListener('click', function() {
+        addCameraSpecButton.addEventListener('click', function(event) {
+            event.preventDefault();
             console.log("Adding new camera specification field"); // Add this line for debugging
             var newField = document.createElement("div");
             newField.innerHTML = '<input type="text" name="camera_specs_type[]" placeholder="Type" required> <input type="text" name="camera_specs_mp[]" placeholder="MP" required>';
